# OminiConfig

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_v2.md  README.md  TEST_REPORT.md  demo.py  main.py  requirements.txt
api/: __init__.py  router.py
configs/gui/: schema_test.json  type_test.json
core/: __init__.py  adapter.py  security.py
doc/: README.md
doc/api/: README.md
doc/architecture/: README.md  v1_overview.md  v2_enterprise.md
doc/context/: README.md  current.md
doc/context/history/: 2026-03-21_refactor_v2_complete.md
doc/context/templates/: session_end.md  session_start.md
doc/guides/: README.md  agent_integration.md  getting_started.md
doc/standards/: README.md
omini_config/: __init__.py  adapter.py  api.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: .!24631!commands.rs  commands.rs  lib.rs  main.rs  utils.rs  watcher.rs
static/: index.html
tempTests/: README.md
tests/: README.md  test_adapter.py  test_gui.py
