[package]
name = "omini-config"
version = "2.0.0"
description = "OminiConfig V2.0 - Native Desktop Config Manager"
authors = ["OminiConfig Team"]
edition = "2021"
rust-version = "1.70"

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
notify = "6.1"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
chrono = "0.4"
once_cell = "1.19"
fastrand = "2.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
serial_test = "3.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[[bin]]
name = "omini-config"
path = "src/main.rs"